# Azer-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: batch2d.frag  batch2d.vert  frag.spv  frag_spv.h  vert.spv  vert_spv.h
src/: Azer.h  CMakeLists.txt  azpch.cpp  azpch.h
src/backends/SDL3GPURenderer/: GPUTexture.h  SDL3GPURenderer.cpp  SDL3GPURenderer.h  SDL3GPURendererSupport.cpp  SDL3GPURendererSupport.h
src/backends/SDL3Renderer/: SDL3Renderer.cpp  SDL3Renderer.h  SDL3Texture.h
src/backends/SDL3Window/: SDL3Window.cpp  SDL3Window.h
src/base/: Application.cpp  Application.h  Base.h  DeltaTime.cpp  DeltaTime.h  EntryPoint.h  Event.cpp  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  SplashLayer.cpp  SplashLayer.h  Window.cpp  Window.h
src/renderer/: Camera.h  Camera2D.h  Camera3D.h  RenderSettings.cpp  RenderSettings.h  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Texture.h
